fixed the problems

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ DB_NAME='<Название ваши базы данных>'
 EMAIL_URL='<REDIRECT_EMAIL>'
 SENTRY_DSN='<SENTRY>'
 RESEND_API_KEY='<апи ключ от resend.com для отправки электронного письма>'
+EMAIL='<Email вашего сервиса>'
+REPLY_MAIL='<Email который клиент будет использовать для ответа>'
